📼⏲ Checkpoint ./server.js:37906304/28 ./views/streamer.ejs:37906304/16 ./views/liveRoom.ejs:37906304/251 ./public/style.css:37906304/8

--- a/public/style.css
+++ b/public/style.css
@@ -486,7 +486,7 @@ body {
   background: rgba(20, 20, 20, 0.95);
   color: #fff;
   z-index: 9999;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   flex-direction: column;
