🚀🍥 Checkpoint ./views/liveRoom.ejs:37906304/1347 ./views/streamer.ejs:37906304/18

--- a/views/liveRoom.ejs
+++ b/views/liveRoom.ejs
@@ -183,6 +183,9 @@
           socket.emit("webrtcCandidate", { roomId, candidate: event.candidate });
         }
       };
+      pc.oniceconnectionstatechange = () => {
+        console.log("ICE state:", pc.iceConnectionState);
+      };
       try {
         await pc.setRemoteDescription(new RTCSessionDescription(offer));
         const answer = await pc.createAnswer();
