🌔🐢 Checkpoint ./views/streamer.ejs:37906304/65 ./views/liveRoom.ejs:37906304/63

--- a/views/liveRoom.ejs
+++ b/views/liveRoom.ejs
@@ -190,6 +190,7 @@
       };
       pc.onicecandidate = event => {
         if (event.candidate) {
+          console.log("New ICE candidate: ", event.candidate);
           socket.emit("webrtcCandidate", { roomId, candidate: event.candidate });
         }
       };
