🐌🌉 Checkpoint ./views/liveRoom.ejs:37906304/270 ./server.js:37906304/228

--- a/views/liveRoom.ejs
+++ b/views/liveRoom.ejs
@@ -270,6 +270,13 @@
         window.location.href = "https://hoctap-9a3.glitch.me/live";
       }, 15000);
     });
+    
+    setInterval(() => {
+      if (socket && roomId) {
+        socket.emit("keepAlive", { roomId });
+        console.log("Keep-alive sent for room:", roomId);
+      }
+    }, 15000);
   </script>
 </body>
 </html>
